--- a/index.css
+++ b/index.css
@@ -58,20 +58,20 @@ body {
         rgba(255, 255, 255) 25% ,
         rgba(255, 255, 255, 0)
         ) , url('https://static.toss.im/assets/homepage/newtossim/new_main.png');
-    background-size: 127%;
+    background-size: 1640px;
     background-repeat: no-repeat;
     background-position-x: center;
 }
 
 .href_menu > div > a {
-    text-decoration-line: none;
+    display: inline-block; 
     color: white;
     font-size: 19px;
     font-weight: 600;
     background-color: rgba(0, 0, 0, 0.781);
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 7px;
+    padding: 8px 16px; /*몹집 키우기 */
+    text-align: center; /* 글자 중앙 배열 */
+    text-decoration: none; /* 번들거림 없에기 */
+    text-decoration-line: none; /* 밑줄 없에기 */
+    border-radius: 7px;  /* 테두리 둥글게 하기 */
 }
