--- a/index.css
+++ b/index.css
@@ -2,40 +2,66 @@
     margin: 0 0 0 0 ;
 }
 
+.min_menu {
+    display: none;
+}
+
+.min_menu > button {
+    border: 12px 10px;
+}
+
+.main_nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1140px;
+    margin: auto;
+}
+
 .nav_bar {
-    display: grid;
-    grid-template-columns: auto auto ;
-    text-align: center;
-    margin-top: 20px;
-    margin-left: 380px;
-    font-size: 14px;
-    font-weight: 600;
-    color: rgba(37, 37, 37, 0.781);
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.main_menu {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    text-align: center;
-    margin-left: 20%;
+.main_menu>ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
 }
 
-.lang_menu {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    text-align: center;
-    justify-content: center;
+.main_menu>ul>li {
+    padding: 0 8px;
 }
 
-.lang_item {
-    padding-left: 15px;
-    padding-right: 15px;
+.main_menu>ul>li>a {
+    padding: 12px 10px;
 }
 
-.logo {
-    position: absolute;
-    top: 20px;
-    left: 110px;
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.lang_menu > ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
+}
+
+.lang_menu>ul>li {
+    padding: 0 8px;
+}
+
+.lang_menu>ul>li>a {
+    padding: 12px 10px;
+    font-size: 9px;
+    line-height: 20px;
 }
 
 h1 {
@@ -74,4 +100,64 @@ body {
     text-decoration: none; /* 번들거림 없에기 */
     text-decoration-line: none; /* 밑줄 없에기 */
     border-radius: 7px;  /* 테두리 둥글게 하기 */
+}
+
+@media screen and (max-width: 650px) {
+    .nav_bar,
+    .main_menu,
+    .lang_menu {
+        display: none;
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .click_menu {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .min_menu {
+        display: flex;
+        
+    }
+
+    .click_menu {
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
+        border-radius: 10px;
+        padding: 10px 10px;
+    }
+
+    .click_menu > div > a {
+        padding: 10px 10px;
+    }
+
+    .click_menu > div {
+        margin-bottom: 20px;
+        background-color: gray;
+    }
+
+    .download_button {
+        padding: 6px 10px;
+        border-radius: 20px;
+        border:none;
+        background-color: rgb(74, 131, 253);
+        color: white;
+    }
+
+    .hamburger {
+        filter: brightness(3.0);
+        margin-left: 6px;
+    }
+
+    h1 {
+        font-size : 30px;
+    }
 }
