--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ body {
 }
 
 @media screen and (max-width: 650px) {
+
     .nav_bar,
     .main_menu,
     .lang_menu {
@@ -125,22 +126,29 @@ body {
     }
 
     .click_menu {
+        display: none;
+    }
+
+    .click_menu.show {
+        display:flex;
         position: absolute;
         top: 60px;
-        right: 10px;
-        justify-content: center;
+        right: 10px;        
         align-items: center;
-        background-color: black;
+        background-color: white;
         border-radius: 10px;
-        padding: 10px 10px;
+        gap: 30px;
+        padding: 22px 8px;
+        box-shadow: 1px 1px 2px 2px rgb(216, 216, 216);
     }
 
     .click_menu > div > a {
-        padding: 10px 10px;
+        padding: 15px 10px;
+        background-color: white;
+        border-radius: 10px;
     }
 
-    .click_menu > div {
-        margin-bottom: 20px;
+    .click_menu > div > a:hover {
         background-color: gray;
     }
 
@@ -150,6 +158,7 @@ body {
         border:none;
         background-color: rgb(74, 131, 253);
         color: white;
+        
     }
 
     .hamburger {
